# habr-article-analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  config.toml  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh  run_front.sh  run_ml.sh
.github/workflows/: lint.yml  test.yml
data/markup/: clusters.json
data/targets/: clusters.json  clusters_top_separated.json
docs/: EDA.md  README.md  baselines.md  project_structure.md  setup_guide.md
hubs_cache/: hubs.json
notebooks/: sergiyar.ipynb
notebooks/baselines/: bow_dssm.ipynb  build_model_for_backend.ipynb  metrics.ipynb  word2vec_and_knn_model.ipynb
notebooks/exploratory_data_analysis/: data_visualization.ipynb  sergiyar.ipynb  targets_clusterization.ipynb
src/backend/: .env.example  Dockerfile  README.md  pyproject.toml
src/backend/backend/: __init__.py  config.py  db.py  main.py
src/backend/backend/auth/: __init__.py  auth.py  config.py
src/backend/backend/clients/: __init__.py  database_client.py  ml_service_client.py
src/backend/backend/models/: __init__.py  history.py  user.py
src/backend/backend/routes/: __init__.py  auth_routes.py  forward_routes.py  history_routes.py  models_routes.py
src/backend/backend/utils/: model_manager.py  onnx_runner.py  s3_loader.py
src/core/: config.py  config.toml  pyproject.toml
src/core/core/: config.py
src/core/schemas/api/: __init__.py  forward.py  history.py  models.py  stats.py
src/core/schemas/auth/: __init__.py  user.py
src/frontend/: .dockerignore  .env  Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml
src/frontend/frontend/: __init__.py  app.py  config.py
src/habr_article_analyzer/: clusters.py  data.py  data_loader.py  settings.py  targets.py
src/habr_article_analyzer/data_utils/: generate_negatives.py  split_dataset.py
src/habr_article_analyzer/datasets/: lazy_ranking.py
src/habr_article_analyzer/metrics/: ranking_metrics.py
src/habr_article_analyzer/models/: base.py  wrapper.py
src/habr_article_analyzer/models/baseline/: baseline.py
src/habr_article_analyzer/models/encoders/: base.py  hub_averaging_encoder.py  word2vec_encoder.py
src/habr_article_analyzer/models/predictors/: base.py  knn_predictor.py
src/habr_article_analyzer/trainers/: classification_trainer.py
src/ml_service/: .env.example  Dockerfile  README.md  pyproject.toml
src/ml_service/ml_service/: __init__.py  config.py  main.py
src/ml_service/ml_service/client/: __init__.py  s3_loader.py
src/ml_service/ml_service/inference/: __init__.py  interface.py  model_manager.py  onnx_runner.py
src/ml_service/ml_service/routes/: __init__.py  forward_routes.py  models_routes.py
src/ml_service/ml_service/security/: __init__.py  auth.py
src/ml_training/: pyproject.toml
src/ml_training/ml_training/: settings.py  utils.py
src/ml_training/ml_training/converters/: export.py  inference.py
src/ml_training/ml_training/data/: generate_negatives.py  habr_dataset.py  lazy_ranking.py  loaders.py  split_dataset.py  targets.py
src/ml_training/ml_training/metrics/: ranking_metrics.py
src/ml_training/ml_training/models/: base.py  wrapper.py
src/ml_training/ml_training/models/baseline/: baseline.py
src/ml_training/ml_training/models/encoders/: base.py  hub_averaging_encoder.py  tf_idf_encoder.py  word2vec_encoder.py
src/ml_training/ml_training/models/predictors/: knn_predictor.py  ranking_nn.py
tests/: test_data.py  test_data_loader.py  test_targets.py
tests/core/: test_config.py
tests/ml_training/: test_data_loaders.py  test_habr_dataset.py  test_targets.py
