[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true

[tool.nbqa.config]
black = true
isort = true
flake8 = true
mypy = true
files = ["notebooks/*.ipynb"]

[project]
name = "habr_article_analyzer"
version = "0.1.0"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
