[project]
name = "habr_article_analyzer"
version = "0.1.0"
description = "Analysis tools for Habr articles dataset"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
warn_unused_configs = true
warn_return_any = true
plugins = ["pydantic.mypy"]
disable_error_code = "import,attr-defined,misc"

[tool.nbqa.config]
black = true
isort = true
flake8 = true
files = ["notebooks/*.ipynb"]
