[tool.poetry]
name = "habr_article_analyzer"
version = "0.1.0"
description = "Analysis tools for Habr articles dataset"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "core", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

# ml_training
ml_training = { path = "./src/ml_training", develop = true, optional = true }

# notebooks
matplotlib = { version = "^3.10.8", optional = true }
seaborn = { version = "^0.13.2", optional = true }
wordcloud = { version = "^1.9.4", optional = true }
ipywidgets = { version = "^8.1.8", optional = true }
spacy = { version = "^3.8.11", optional = true }

# data_io
requests = { version = "^2.32.5", optional = true }
zstandard = { version = "^0.25.0", optional = true }
jsonlines = { version = "^4.0.0", optional = true }
tqdm = { version = "^4.67.1", optional = true }
notebook = "^7.5.1"
gensim = "^4.4.0"
torch = "^2.9.1"

[tool.poetry.extras]
backend = []
frontend = []
ml_training = ["ml_training"]
notebooks = ["matplotlib", "seaborn", "jupyterlab", "wordcloud", "ipywidgets", "spacy"]
data_io = ["requests", "zstandard", "jsonlines", "tqdm"]

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
nbval = "^0.11.0"
nbqa = "^1.9.1"
pre-commit = "^4.5.1"
semgrep = "^1.146.0"
pyright = {extras = ["nodejs"], version = "^1.1.407"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
warn_unused_configs = true
warn_return_any = true
plugins = ["pydantic.mypy"]
disable_error_code = "import,attr-defined,misc"

[tool.nbqa.config]
black = true
isort = true
flake8 = true
files = ["notebooks/*.ipynb"]