[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "core", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.127.0"
boto3 = "^1.42.16"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
