[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "core", from = "src" },
    { include = "backend", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.127.0"
boto3 = "^1.42.16"
pydantic-settings = "^2.12.0"
uvicorn = { extras = ["standard"], version = "^0.40.0" }
numpy = "^2.4.0"
onnxruntime = "^1.23.2"
sqlalchemy = "^2.0.45"
uuid = "^1.30"
pydantic = "^2.12.5"
datetime = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
