[tool.poetry]
name = "backend"
version = "1.0.0"
description = "FastAPI backend"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "core", from = "src" },
    { include = "backend", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.127.0"
pydantic-settings = "^2.12.0"
uvicorn = { extras = ["standard"], version = "^0.40.0" }
sqlalchemy = "^2.0.45"
uuid = "^1.30"
pydantic = "^2.12.5"
datetime = "^6.0"
asyncpg = "^0.31.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
python-multipart = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
