[tool.poetry]
name = "core"
version = "0.1.0"
description = "Common dependencies"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
tomli = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
