[tool.poetry]
name = "ml_training"
version = "0.2.0"
description = "Python module for machine learning models training"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.4.0"
scipy = "^1.16.3"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"
onnx = "^1.20.0"
onnxruntime = "^1.23.2"
skl2onnx = "^1.19.1"
onnxscript = "^0.5.7"
torch = "^2.9.1"


# nlp
nltk = { version = "^3.9.2", optional = true }
pymorphy2 = { version = "^0.9.1", optional = true }
gensim = { version = "^4.4.0", optional = true }

# gpu


[tool.poetry.extras]
nlp = ["nltk", "pymorphy2", "gensim"]
gpu = ["torch", "catboost", "tensorboard", "sentence_transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
