[tool.poetry]
name = "ml_training"
version = "0.2.0"
description = "Python module for machine learning models training"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>", "Sergiy Yarigin <sergiyar55@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.4.0"
scipy = "^1.16.3"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"

# nlp
nltk = { version = "^3.9.2", optional = true }
pymorphy2 = { version = "^0.9.1", optional = true }
gensim = { version = "^4.4.0", optional = true }

# gpu


[tool.poetry.extras]
nlp = ["nltk", "pymorphy2", "gensim"]
gpu = ["torch", "catboost", "tensorboard", "sentence_transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
